src/components/Hero/Hero.css
.hero {
  display: flex;
  justify-content: space-around;
  align-items: center;
  min-height: 100vh;
}

.hero__section {
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 500px;
}

.hero__section_align_left {
  align-items: start;
}

.hero__header {
  margin: 0;
  margin-bottom: 3px;
  font-weight: 700;
  font-size: 50px;
}

.hero__subtitle {
  margin: 0;
  margin-bottom: 25px;
  font-weight: 400;
  font-size: 25px;
}

.hero__about {
  margin: 0;
  margin-bottom: 50px;
  font-size: 18px;
}

.hero__img {
  max-width: 400px;
  border-radius: 200px;
  border: 4px solid rgb(85, 0, 0);
}

.hero__button-wrapper {
  display: flex;
  gap: 50px;
}

.hero__button {
  height: 40px;
  width: 110px;
  border-radius: 100px;
  border: 1px solid rgb(160, 140, 140);
  background-image: linear-gradient(
    to right,
    rgb(100, 0, 0) 30%,
    rgb(70, 0, 0)
  );
  color: white;
  transition: opacity 0.15s;
  display: flex;
  align-items: center;
  justify-content: center;
}

.hero__button:link {
  text-decoration: none;
}

.hero__button:visited {
  text-decoration: none;
}

.hero__button:hover {
  opacity: 60%;
  cursor: pointer;
}

@media (max-width: 1300px) {
  .hero__img {
    max-width: 300px;
  }
}

@media (max-width: 1000px) {
  .hero {
    padding-top: 100px;
    flex-direction: column-reverse;
    justify-content: start;
    gap: 75px;
  }
  .hero__img {
    max-width: 400px;
  }
  .hero__section_align_left {
    align-items: center;
    text-align: center;
  }
}

@media (max-width: 650px) {
  .hero__button-wrapper {
    gap: 15px;
  }
}

@media (max-width: 550px) {
  .hero__about {
    max-width: 300px;
  }
  .hero__button {
    width: 80px;
    height: 30px;
    font-size: 15px;
  }
}

@media (max-width: 480px) {
  .hero__img {
    max-width: 300px;
  }
  .hero__header {
    font-size: 40px;
  }
  .hero__subtitle {
    font-size: 20px;
  }
  .hero__button-wrapper {
    flex-direction: column;
    gap: 30px;
  }
  .hero__button {
    height: 40px;
    width: 110px;
    font-size: 18px;
  }
}

